# react-native-cpu-core

./: .gitignore  .npmignore  README.md  expo-module.config.json  package-lock.json  package.json
android/: CMakeLists.txt  build.gradle
android/src/main/java/expo/modules/cpucore/: ReactNativeCpuCoreModule.kt  ReactNativeCpuCoreView.kt
android/src/main/jni/: cpu-core-native.cpp
example/: App.tsx  app.json  metro.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/expo/modules/cpucore/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/reactnativecpucoreexample/: Info.plist
example/ios/reactnativecpucoreexample.xcodeproj/: project.pbxproj
example/ios/reactnativecpucoreexample.xcodeproj/xcshareddata/xcschemes/: reactnativecpucoreexample.xcscheme
example/ios/reactnativecpucoreexample.xcworkspace/: contents.xcworkspacedata
ios/: ReactNativeCpuCore.podspec  ReactNativeCpuCoreModule.swift  ReactNativeCpuCoreView.swift
src/: ReactNativeCpuCore.types.ts  ReactNativeCpuCoreModule.ts  ReactNativeCpuCoreModule.web.ts  ReactNativeCpuCoreView.tsx  ReactNativeCpuCoreView.web.tsx  index.ts
